ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-decon
spec:
  rules:
  - host: kube-decon.kubecon.carson-anderson.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-decon
          servicePort: 80
